fix: corrigindo erros